--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 
   <body>
     <%= render 'shared/header' %>
-    <div class='content'>
+    <div class='container'>
       <%= yield %>
     </div>
   </body>
