--- a/app/views/movies/show.html.erb
+++ b/app/views/movies/show.html.erb
@@ -1,19 +1,37 @@
-<%= javascript_include_tag "rate" %>
-
-<div class='movies'>
-  <div class='movie-wide col-md-10 col-xs-12'>
-    <h2> <%= 'Title: ' + @movie.title %> </h2>
-    <h2 class='movie-text'> <%= 'Description:' + @movie.text %> </h2>
-    <h2 class='movie-category'> <%= 'Category: ' + @movie.category.name %> </h2>
-    <% if user_signed_in? %>
-      <h2 class='movie-rating' id=<%="rating-#{@movie.id}"%>> <%= 'Rating: ' + @movie.raiting %> </h2>
-      <% if !@movie.rated_by_me %>
-        <div class='rate' id=<%="rate-#{@movie.id}"%>>
-          <% 0.upto(10) do |rate| %>
-            <button class='rate-button' onClick=<%= "rateMovie(" + @movie.id.to_s + "," + rate.to_s + ")" %>><%= rate %></button>
-          <% end %>
-        </div>
-      <% end %>
-    <% end %>
+<div class='card mb-4'>
+  <img src='https://cdn.thegeekherald.com/wp-content/uploads/2019/11/Shriek-5-cancelled-e1572632977518.jpg'>
+  <div class='card-body'>
+    <a class='movie-title' href=<%= "/movies/#{@movie.id}" %>><h2> <%= @movie.title %> </h2></a>
+    <h4 class='movie-text'> <%= @movie.text %> </h3>
+    <h3 class='movie-category'> <%= @movie.category.name %> </h3>
+      <div clas='rate-block'>
+        <h3 class='movie-rating' id=<%="rating-#{@movie.id}"%>> <%= @movie.raiting %> </h3>
+        <% if user_signed_in? && !@movie.rated_by_me %>
+          <button type="button" id=<%= "rate-open" + @movie.id.to_s %> class="rate-button-modal btn btn-primary" data-toggle="modal" data-target=<%="#exampleModal" + @movie.id.to_s %>>
+            Rate
+          </button>
+      
+          <div class="modal fade" id=<%= "exampleModal" + @movie.id.to_s %> tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+            <div class="modal-dialog" role="document">
+              <div class="modal-content">
+                <div class="modal-header">
+                  <h5 class="modal-title" id="exampleModalLabel">Rate from 0 to 10</h5>
+                  <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                  </button>
+                </div>
+                <div class="modal-body">
+                  <div class='rate' id=<%="rate-#{@movie.id}"%>>
+                    <% 0.upto(10) do |rate| %>
+                      <button class='btn btn-primary' onClick=<%= "rateMovie(" + @movie.id.to_s + "," + rate.to_s + ")" %>><%= rate %></button>
+                    <% end %>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <i class='rate-star fa fa-star'></i>
+        <% end %>
+      </div>
   </div>
 </div>
