--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,10 +1,10 @@
 <div class='top-header'>
   <div class='header-buttons'>
     <% if(user_signed_in?) %>
-      <button  onClick="logout()" >Logout</button>
-      <h2><%= current_user.email %><h2>
+      <button class='btn btn-primary' onClick="logout()" >Logout</button>
+      <h4><%= 'Hi, ' + current_user.email %><h2>
     <% else %>
-      <a href="/users/sign_in"><button>Login/Register</button></a>
+      <a href="/users/sign_in"><button class='btn btn-primary'>Login/Register</button></a>
     <% end %>
   </div>
 </div>
